--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <div class="container">
   <div class="one">
     <h1 class="one">
-      Hi
-      <span id="name"></span>
+      Hi 
+     Sayang <span id="name"></span>
     </h1>
     <p class="two" id="greetingText">I really like your name btw!lt;/p>
   </div>
