--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-        Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicingelit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quosaperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
-      </p>
-      <p class="fake-btn">Send</p>
+        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, dan pastinya di panjangkan Umurnya. Amin Amin Ya Robbalallamin </p>
+      <p class="fake-btn">Thanks</p>
     </div>
   </div>
 
