--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Hi 
      Sayang <span id="name"></span>
     </h1>
-    <p class="two" id="greetingText">I really like your name btw!lt;/p>
+    <p class="two" id="greetingText">Vivit Novitasari Ku</p>
   </div>
 
   <div class="three">
