--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="three">
-    <p>It's your birthday!! :D</p>
+    <p>It's your birthday yang</p>
   </div>
 
   <div class="four">
@@ -47,15 +47,17 @@
     <p class="idea-2">But then I stopped.</p>
     <p class="idea-3">
       I realised, I wanted to do something<br>
+    <p class="idea-4">But then I stopped.</p>
+
       <strong>special</strong>
       .
     </p>
-    <p class="idea-4">Because,</p>
-    <p class="idea-5">
+    <p class="idea-5">Because,</p>
+    <p class="idea-6">
       You are Special
       <span>:)</span>
     </p>
-    <p class="idea-6">
+    <p class="idea-7">
       <span>S</span>
       <span>O</span>
     </p>
