--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, dan pastinya di panjangkan Umurnya. Amin Amin Ya Robbalallamin </p>
+        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. Amin Amin Ya Robbalallamin </p>
       <p class="fake-btn">Thanks</p>
     </div>
   </div>
@@ -47,17 +47,15 @@
     <p class="idea-2">But then I stopped.</p>
     <p class="idea-3">
       I realised, I wanted to do something<br>
-    <p class="idea-4">But then I stopped.</p>
-
       <strong>special</strong>
       .
     </p>
-    <p class="idea-5">Because,</p>
-    <p class="idea-6">
+    <p class="idea-4">Because,</p>
+    <p class="idea-5">
       You are Special
       <span>:)</span>
     </p>
-    <p class="idea-7">
+    <p class="idea-6">
       <span>S</span>
       <span>O</span>
     </p>
