--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
     <div class="text-box">
       <p class="hbd-chatbox">
         Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. Amin Amin Ya Robbalallamin </p>
-      <p class="fake-btn">Thanks</p>
+      <p class="fake-btn">Semoga Ya</p>
     </div>
   </div>
 
   <div class="five">
-    <p class="idea-1">That's what I was going to do.</p>
-    <p class="idea-2">But then I stopped.</p>
+    <p class="idea-1">Maaf, Belum bisa jadi yg kamu inginkan</p>
+    <p class="idea-2">Belum bisa jadi yg bisa sempurna dalam hidup mu</p>
     <p class="idea-3">
-      I realised, I wanted to do something<br>
-      <strong>special</strong>
+      I reaHanya ini yg bisa mas ucapkan, untuk kamu <br>
+      <strong>special my life</strong>
       .
     </p>
-    <p class="idea-4">Because,</p>
+    <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
-      You are Special
+      Selamat Ulang Tahun yg Ke
       <span>:)</span>
     </p>
     <p class="idea-6">
-      <span>S</span>
-      <span>O</span>
+      <span>2</span>
+      <span>4</span>
     </p>
   </div>
 
@@ -66,7 +66,7 @@
     <img src="img/gambar disini.jpg" alt="hat" class="hat" />
     <div class="wish">
       <h3 class="wish-hbd">Happy Birthday!</h3>
-      <h5 id="wishText">May the js.prototypes always be with you! ;)<h5>
+      <h5 id="wishText">VIVIT NOVITASARI<h5>
     </div>
   </div>
 
