--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
 
   <div class="five">
     <p class="idea-1">Maaf, Belum bisa jadi yg kamu inginkan</p>
-    <p class="idea-2">Belum bisa jadi yg bisa sempurna dalam hidup mu</p>
-    <p class="idea-3">
-      I reaHanya ini yg bisa mas ucapkan, untuk kamu <br>
+    <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu</p>
+    <p class="idea-3">Hanya ini yg bisa mas ucapkan, untuk kamu yang <br>
       <strong>special my life</strong>
       .
     </p>
     <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
-      Selamat Ulang Tahun yg Ke
+      Selamat Ulang Tahun yg Ke 24 tahun
       <span>:)</span>
     </p>
     <p class="idea-6">
@@ -63,7 +62,7 @@
 
   <div class="six">
     <img src="./img/Vivit.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-    <img src="img/gambar disini.jpg" alt="hat" class="hat" />
+    
     <div class="wish">
       <h3 class="wish-hbd">Happy Birthday!</h3>
       <h5 id="wishText">VIVIT NOVITASARI<h5>
