--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   </div>
 
   <div class="five">
-    <p class="idea-1">Maaf, Belum bisa jadi yg kamu inginkan</p>
+    <p class="idea-1">Maaf, Masih Nganggur 😭 Belum bisa jadi yg kamu inginkan</p>
     <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu</p>
-    <p class="idea-3">Hanya ini yg bisa mas ucapkan, untuk kamu yang <br>
-      <strong>special my life</strong>
+    <p class="idea-3">Hanya ini yg bisa mas ucapkan <br>
+      <strong>special</strong>
       .
     </p>
     <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
-      Selamat Ulang Tahun yg Ke 24 tahun
+      Selamat Ulang Tahun Nggih Yang
       <span>:)</span>
     </p>
     <p class="idea-6">
