--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Www<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -51,12 +51,12 @@
     </p>
     <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
-      Selamat Ulang Tahun Nggih Yang
+      Maaf Nggih
       <span>:)</span>
     </p>
-    <p class="idea-6">
+    <p class="idea-6"> 
       <span>2</span>
-      <span>4</span>
+      <span>4</span> Tahun
     </p>
   </div>
 
