--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Www<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,13 +31,14 @@ Www<!DOCTYPE html>
   </div>
 
   <div class="three">
-    <p>It's your birthday yang</p>
+    <p>It's your birthday yang | 27 october 1997</p>
   </div>
 
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. Amin Amin Ya Robbalallamin </p>
+        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikurangin Egonya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. 
+Amin Amin Ya Robbalallamin </p>
       <p class="fake-btn">Semoga Ya</p>
     </div>
   </div>
@@ -51,12 +52,12 @@ Www<!DOCTYPE html>
     </p>
     <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
-      Maaf Nggih
+      Maaf Nggih Yang
       <span>:)</span>
     </p>
     <p class="idea-6"> 
-      <span>2</span>
-      <span>4</span> Tahun
+      <span>V</span>
+      <span>O</span>
     </p>
   </div>
 
