--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   </div>
 
   <div class="three">
-    <p>It's your birthday yang | 27 october 1997</p>
+    <p>It's your birthday yang</p>
   </div>
 
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-        Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikurangin Egonya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. 
+       27 October 1997 | Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. 
 Amin Amin Ya Robbalallamin </p>
       <p class="fake-btn">Semoga Ya</p>
     </div>
@@ -47,7 +47,7 @@ Amin Amin Ya Robbalallamin </p>
     <p class="idea-1">Maaf, Masih Nganggur 😭 Belum bisa jadi yg kamu inginkan</p>
     <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu</p>
     <p class="idea-3">Hanya ini yg bisa mas ucapkan <br>
-      <strong>special</strong>
+      <strong>Love You</strong>
       .
     </p>
     <p class="idea-4">Sekali lagi</p>
@@ -139,8 +139,8 @@ Amin Amin Ya Robbalallamin </p>
   </div>
 
   <div class="nine">
-    <p>Okay, now come back and tell me if you liked it.</p>
-    <p id="replay">Or click, if you want to watch it again.</p>
+    <p>Thanks, Kado Menyusul Ya😤 </p>
+    <p id="replay">VIO | Kalo Suka dan ingin lagi, Tap aja VIO nya. TAPI kalo gak suka ya kembali aja ke menu 🙂</p>
     <p class="last-smile">:)</p>
   </div>
 </div>
