--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ Amin Amin Ya Robbalallamin </p>
   </div>
 
   <div class="five">
-    <p class="idea-1">Maaf, Masih Nganggur 😭 Belum bisa jadi yg kamu inginkan</p>
-    <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu</p>
+    <p class="idea-1">Maaf, Belum Dapet Kerja 😭 Belum bisa jadi yg kamu inginkan</p>
+    <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu, tapi udah Berusaha✌</p>
     <p class="idea-3">Hanya ini yg bisa mas ucapkan <br>
       <strong>Love You</strong>
-      .
+      
     </p>
     <p class="idea-4">Sekali lagi</p>
     <p class="idea-5">
@@ -57,7 +57,8 @@ Amin Amin Ya Robbalallamin </p>
     </p>
     <p class="idea-6"> 
       <span>V</span>
-      <span>O</span>
+      <span>I</span>
+      <span>O</span>
     </p>
   </div>
 
@@ -140,7 +141,8 @@ Amin Amin Ya Robbalallamin </p>
 
   <div class="nine">
     <p>Thanks, Kado Menyusul Ya😤 </p>
-    <p id="replay">VIO | Kalo Suka dan ingin lagi, Tap aja VIO nya. TAPI kalo gak suka ya kembali aja ke menu 🙂</p>
+    <p id="replay">Kalo Suka dan ingin liat lagi,Tap aja atau back . 
+TAPI kalo gak suka ya kembali aja ke menu hehe 🙂</p>
     <p class="last-smile">:)</p>
   </div>
 </div>
