--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-       27 October 1997 | Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. 
+       27 NOVEMBER 1997 | Happy birthday to youu!! Semoga Sehat Selalu, Dilancarkan Rejekinya, Disabarkan Hatinya, Dikabulkan keinginanya, dan pastinya di panjangkan Umurnya. 
 Amin Amin Ya Robbalallamin </p>
       <p class="fake-btn">Semoga Ya</p>
     </div>
@@ -56,8 +56,8 @@ Amin Amin Ya Robbalallamin </p>
       <span>:)</span>
     </p>
     <p class="idea-6"> 
-      <span>V</span>
-      <span>O</span>
+      <span>2</span>
+      <span>5</span>
     </p>
   </div>
 
