--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Amin Amin Ya Robbalallamin </p>
   </div>
 
   <div class="five">
-    <p class="idea-1">Maaf, Belum Dapet Kerja. Belum bisa jadi yg sayang inginkan</p>
+    <p class="idea-1">Maaf, Belum Dapet Kerjaan. Belum bisa jadi yg kamu inginkan. Masih selalu ngrepotin</p>
     <p class="idea-2">Belum bisa jadi yg sempurna dalam hidup mu, tapi udah Berusaha✌</p>
     <p class="idea-3">Hanya ini yg bisa mas ucapkan <br>
       <strong>Love You</strong>
